--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HmsTeam.OrchestratorAPI.Activities" version="2023.5.22" />
+  <package id="UiPath.System.Activities" version="21.4.1" />
 </packages>
